--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "POGOProtos"]
 	path = POGOProtos
-	url = git@github.com:AeonLucid/POGOProtos.git
+	url = https://github.com/pogodevorg/POGOProtos.git
