--- a/.travis.yml
+++ b/.travis.yml
@@ -2,3 +2,12 @@ language: go
 
 go:
   - 1.6
+
+# Disable the default submodule logic
+git:
+  submodules: false
+
+# Use sed to replace the SSH URL with the public URL, then init and update submodules
+before_install:
+  - sed -i 's/git@github.com:/https:\/\/github.com\//' .gitmodules
+  - git submodule update --init --recursive
